<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>is_gps_publisher_ros2</name>
  <version>1.1.0</version>
  <description>GPS and IMU data parser and publisher ROS2 package, created for the 
    Scout 2.0 Autonomous Navigation Project at Clarkson University.</description>
  <maintainer email="kitchear@clarkson.edu">Adam Kitchen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
